<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/imageButton_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:contentDescription="@string/content_description_about"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/textView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_default"
        android:textColor="#DCDCDC"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_changelog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_margin="1dp"
            android:padding="10dp"
            android:text="@string/title_change_log"
            android:textColor="#1E90FF"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>